# cython-pyarrow-mwe

./: pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
cython_pyarrow_mwe/: demo.pxd  demo.pyx
tests/: test_demo.py
