[build-system]
requires = ["setuptools", "numpy", "cython", "pyarrow"]

[tool.cibuildwheel]
build = ["cp310-*"]

[tool.cibuildwheel.linux]
archs = ["auto"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --exclude libarrow.so --exclude libarrow_python.so"

[tool.cibuildwheel.macos]
archs = ["x86_64"]
environment = { CC="gcc-12", CXX="g++-12" }
repair-wheel-command = "delocate-wheel -vv --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
