[build-system]
requires = ["setuptools", "numpy", "cython", "pyarrow"]

[tool.cibuildwheel]
build = ["cp310-*"]

[tool.cibuildwheel.linux]
archs = ["auto"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["auto"]
environment = { CC="gcc-12", CXX="g++-12" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
